fixed overflow

--- a/motivation.css
+++ b/motivation.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
     font-family: 'Montserrat',sans-serif;
 } */
+
+    body{
+        overflow-x: hidden;
+    }
+
     a{
         text-decoration: none;
         color:black;
