--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 *{ margin: 0;
 padding: 0;
 box-sizing: border-box;
-font-family: 'Montserrat',sans-serif;}
+font-family: 'Montserrat',sans-serif;
+overflow-x: none;}
+body{
+  overflow-x: hidden;
+}
 a{
     text-decoration: none;
     color:black;
